--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
   <head>
       <meta charset="utf-8">
       <title>index</title>
+<style type="text/css">
+body {
+bgcolor: grey;
+color: white;
+} 
+
+h1 {
+bgcolor: green;
+} 
+
+
+</style>
   </head>
   <body>
     <h1>jonesform</h1>
 
-<p> hey jake
     
   </body>
 </html>
