--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
       <title>index</title>
 <style type="text/css">
 body {
-bgcolor: grey;
+backgroundcolor: grey;
 color: white;
 } 
 
 h1 {
-bgcolor: green;
+backgroundcolor: green;
 } 
 
 
