--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
       <title>index</title>
 <style type="text/css">
 body {
-backgroundcolor: grey;
+background-color: grey;
 color: white;
 } 
 
 h1 {
-backgroundcolor: green;
+background-color: green;
 } 
 
 
